objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <description>This object will contain informations about the costomer who make the resevation.</description>
    <label>Customer</label>
    <nameField>
        <label>First Name / Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>