objects/Customer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This field will contain the addresses of the customers.</description>
    <label>Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>