objects/Customer__c/fields/Billing_Address_Is_The_Same__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Is_The_Same__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will contain true or false value about if billing address is the same that the customer gave previously</description>
    <label>Billing Address Is The Same</label>
    <type>Checkbox</type>
</CustomField>