objects/Customer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field will contain a list of city names.</description>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Ankara</fullName>
            </value>
            <value>
                <fullName>Antananarivo</fullName>
            </value>
            <value>
                <fullName>Bangkok</fullName>
            </value>
            <value>
                <fullName> Beijing</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Bogotá</fullName>
            </value>
            <value>
                <fullName>Brasília</fullName>
            </value>
            <value>
                <fullName>Brussels</fullName>
            </value>
            <value>
                <fullName>Budapest</fullName>
            </value>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Cairo</fullName>
            </value>
            <value>
                <fullName>Caracas</fullName>
            </value>
            <value>
                <fullName>Havan</fullName>
            </value>
            <value>
                <fullName>Jakarta</fullName>
            </value>
            <value>
                <fullName>Jerusalem</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Lisbon</fullName>
            </value>
            <value>
                <fullName>Manama</fullName>
            </value>
            <value>
                <fullName>Mexico City</fullName>
            </value>
            <value>
                <fullName>Moscow</fullName>
            </value>
            <value>
                <fullName>Nairobi</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Ottawa</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Port Louis</fullName>
            </value>
            <value>
                <fullName>Rabat</fullName>
            </value>
            <value>
                <fullName>Santo Domingo</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Stockholm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>