objects/Customer__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>This field will contain the name of the customers.</description>
    <label>Customer Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>