objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field will contain the customer&#39;s email address..</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>