objects/Customer__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This field will contain the name of the customers.</description>
    <label>Customer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>