objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field will contain the customer&#39;s phone number.</description>
    <inlineHelpText>Use this format (99) (999-9999)</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>