objects/Customer__c/fields/zip__c.field-meta.xml
<CustomField>
    <fullName>zip__c</fullName>
    <label>zip</label>
    <length>6</length>
    <type>Text</type>
</CustomField>