objects/Customer__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>This field will contain the zip code what belongs to customer address.</description>
    <label>Zip Code</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>