objects/Customer__c/validationRules/Check_Zip_Code_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Zip_Code_length</fullName>
    <active>true</active>
    <description>This validationRule will check the length of the zip code</description>
    <errorConditionFormula>NOT(REGEX(Zip_Code__c, &quot;\\d{4,5}(-\\d{4})?&quot;))</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
</ValidationRule>